# sandbox

./: .gitignore  LICENSE.md  README.md
bash/: .bashrc  .profile
boost/: CMakeLists.txt  Makefile  README.txt  example.cpp
boost_python/: CMakeLists.txt  README.md  build.cmd  greet.cpp  greet.h  greet_ext.cpp  hello.cpp  hello.py
boost_python/lib/: hello.py
boost_python/tests/: test_greet.py
cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TutorialConfig.h  build.cmd  cmake_install.cmake  tutorial.cxx
cmake_qt/: CMakeLists.txt  main.cc
cppstrings/: CMakeLists.txt  main.cc
cython/: README.md  rect.cpp  rect.pyx  setup.py
emacs/: .emacs
etc/: cc64.cmd  configurehome  vs32.bat  vs64.bat
excelsdk/: ExcelSDK_eula.rtf
gitconfig/: .gitignore  README
meteor/: README.md
nodejs/: commandline-args.js  filtereddir.js  modularfiltereddir.js  mymodule.js  readfileasync.js  readfilesync.js
xlw/: CMakeLists.txt  README.md
xlw/xlw-5.0.2f0/xlw/examples/C++CLR/vc11/: CppCLRExample.sln  RunInterfaceGenerator.vcxproj  XLL.vcxproj
xlw/xlw-5.0.2f0/xlw/examples/C++CLR/vc11/AutoGeneratedSource/: mxlwcppinterface.cpp  xlwcppinterface.cpp
xlw/xlw-5.0.2f0/xlw/examples/C++CLR/vc12/: CppCLRExample.sln  RunInterfaceGenerator.vcxproj  XLL.vcxproj  XLL.vcxproj.filters
xlw/xlw-5.0.2f0/xlw/examples/C++CLR/vc12/AutoGeneratedSource/: mxlwcppinterface.h
xlw/xlw-5.0.2f0/xlw/examples/C++CLR_password/vc12/: RunInterfaceGenerator.vcxproj  XLL.vcxproj  XLL.vcxproj.filters
xlw/xlw-5.0.2f0/xlw/examples/C++CLR_password/vc12/AutoGeneratedSource/: mxlwcppinterface.cpp  mxlwcppinterface.h  xlwcppinterface.cpp
xlw/xlw-5.0.2f0/xlw/examples/Commands and Attributes/gcc-make/: Makefile  XLL.mak
xlw/xlw-5.0.2f0/xlw/examples/Commands and Attributes/vc11/: XLL.vcxproj
xlw/xlw-5.0.2f0/xlw/examples/Commands and Attributes/vc12/: RunInterfaceGenerator.vcxproj  XLL.vcxproj  XLL.vcxproj.filters
xlw/xlw-5.0.2f0/xlw/examples/Handwritten/vc11/: XLL.vcxproj
xlw/xlw-5.0.2f0/xlw/examples/Handwritten/vc12/: XLL.vcxproj
xlw/xlw-5.0.2f0/xlw/examples/Handwritten/vc12/Debug/: ExampleHandWritten.exp  ExampleHandWritten.lib  ExampleHandWritten.xll
xlw/xlw-5.0.2f0/xlw/examples/MJ - Design Patterns/gcc-make/: XLL.mak
xlw/xlw-5.0.2f0/xlw/examples/MJ - Design Patterns/vc11/: RunInterfaceGenerator.vcxproj  XLL.vcxproj  XLL.vcxproj.filters
xlw/xlw-5.0.2f0/xlw/examples/MJ - Design Patterns/vc12/: XLL.vcxproj
xlw/xlw-5.0.2f0/xlw/examples/ObjectCacheDemo/vc11/: RunInterfaceGenerator.vcxproj  XLL.vcxproj
xlw/xlw-5.0.2f0/xlw/examples/ObjectCacheDemo/vc12/: RunInterfaceGenerator.vcxproj  XLL.vcxproj  XLL.vcxproj.filters
xlw/xlw-5.0.2f0/xlw/examples/Start Here - Example/vc11/: XLL.vcxproj  XLL.vcxproj.filters
xlw/xlw-5.0.2f0/xlw/examples/Start Here - Example/vc12/: XLL.vcxproj
xlw/xlw-5.0.2f0/xlw/examples/Typeregister/vc11/: XLL.vcxproj
xlw/xlw-5.0.2f0/xlw/examples/Typeregister/vc12/: XLL.vcxproj  XLL.vcxproj.filters
xlw/xlw-5.0.2f0/xlw/examples/Typeregister/vc12/AutoGeneratedSource/: xlwTest.cpp
xlw/xlw-5.0.2f0/xlwDotNet/Examples/Start Here - Example/VS11/Addin/: DotNet.csproj  Example.sln  XLL.vcxproj
xlw/xlw-5.0.2f0/xlwDotNet/Examples/Start Here - Example/VS11/AutoGeneratedSource/: DLL.h  xlwXLL.cpp
xlw/xlw-5.0.2f0/xlwDotNet/Examples/Start Here - Example/VS11/Generators/: RunDotNetInterfaceGenerator.vcxproj  RunInterfaceGenerator.vcxproj
xlw/xlw-5.0.2f0/xlwDotNet/Examples/Start Here - Example/VS12/Addin/: DotNet.csproj  XLL.vcxproj
xlw/xlw-5.0.2f0/xlwDotNet/Examples/Start Here - Example/VS12/AutoGeneratedSource/: DLL.cpp
xlw/xlw-5.0.2f0/xlwDotNet/Examples/Start Here - Example/VS12/Generators/: RunDotNetInterfaceGenerator.vcxproj  RunInterfaceGenerator.vcxproj
xlw/xlw-5.0.2f0/xlwDotNet/Template_Projects/Hybrid_Cpp_CSharp_XLLs/VS10_PRO/: HybridTemplate.sln
xlw/xlw-5.0.2f0/xlwDotNet/Template_Projects/Hybrid_Cpp_CSharp_XLLs/VS10_PRO/Addin/: XLL.vcxproj
xlw/xlw-5.0.2f0/xlwDotNet/Template_Projects/Hybrid_Cpp_CSharp_XLLs/VS10_PRO/Generators/: RunDotNetInterfaceGenerator.vcxproj  RunHybridInterfaceGenerator.vcxproj
xlw/xlw-5.0.2f0/xlwDotNet/Template_Projects/Hybrid_Cpp_CSharp_XLLs/VS10_PRO/csharp_source/: DotNet.csproj
xlw/xlw-5.0.2f0/xlwDotNet/Template_Projects/Hybrid_Cpp_CSharp_XLLs/VS11_PRO/: HybridTemplate.sln
xlw/xlw-5.0.2f0/xlwDotNet/Template_Projects/Hybrid_Cpp_CSharp_XLLs/VS11_PRO/Addin/: XLL.vcxproj
xlw/xlw-5.0.2f0/xlwDotNet/Template_Projects/Hybrid_Cpp_CSharp_XLLs/VS11_PRO/Generators/: RunDotNetInterfaceGenerator.vcxproj  RunHybridInterfaceGenerator.vcxproj
xlw/xlw-5.0.2f0/xlwDotNet/Template_Projects/Hybrid_Cpp_CSharp_XLLs/VS11_PRO/csharp_source/: DotNet.csproj
xlw/xlw-5.0.2f0/xlwDotNet/Template_Projects/Hybrid_Cpp_CSharp_XLLs/VS12_PRO/: HybridTemplate.sln
xlw/xlw-5.0.2f0/xlwDotNet/Template_Projects/Hybrid_Cpp_CSharp_XLLs/VS12_PRO/Addin/: XLL.vcxproj
xlw/xlw-5.0.2f0/xlwDotNet/Template_Projects/Hybrid_Cpp_CSharp_XLLs/VS12_PRO/Generators/: RunDotNetInterfaceGenerator.vcxproj  RunHybridInterfaceGenerator.vcxproj
xlw/xlw-5.0.2f0/xlwDotNet/Template_Projects/Hybrid_Cpp_CSharp_XLLs/VS12_PRO/csharp_source/: DotNet.csproj
xlw/xlw-5.0.2f0/xlwDotNet/Template_Projects/Hybrid_Cpp_CSharp_XLLs/VS8_PRO/: HybridTemplate.sln
xlw/xlw-5.0.2f0/xlwDotNet/Template_Projects/Hybrid_Cpp_CSharp_XLLs/VS8_PRO/Addin/: XLL.vcproj
xlw/xlw-5.0.2f0/xlwDotNet/Template_Projects/Hybrid_Cpp_CSharp_XLLs/VS8_PRO/Generators/: RunDotNetInterfaceGenerator.vcproj  RunHybridInterfaceGenerator.vcproj
xlw/xlw-5.0.2f0/xlwDotNet/Template_Projects/Hybrid_Cpp_CSharp_XLLs/VS8_PRO/csharp_source/: DotNet.csproj
xlw/xlw-5.0.2f0/xlwDotNet/Template_Projects/Hybrid_Cpp_CSharp_XLLs/VS9_PRO/: HybridTemplate.sln
xlw/xlw-5.0.2f0/xlwDotNet/Template_Projects/Hybrid_Cpp_CSharp_XLLs/VS9_PRO/Addin/: XLL.vcproj
xlw/xlw-5.0.2f0/xlwDotNet/Template_Projects/Hybrid_Cpp_CSharp_XLLs/VS9_PRO/Generators/: RunDotNetInterfaceGenerator.vcproj  RunHybridInterfaceGenerator.vcproj
xlw/xlw-5.0.2f0/xlwDotNet/Template_Projects/Hybrid_Cpp_CSharp_XLLs/VS9_PRO/csharp_source/: DotNet.csproj
ylib/: README.md
(+209 files in other folders)
